name:                gore-and-ash-network
version:             1.0.0.0
synopsis:            Core module for Gore&Ash engine with low level network API
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash-network
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015-2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.GoreAndAsh.Network
                       Game.GoreAndAsh.Network.API
                       Game.GoreAndAsh.Network.Message
                       Game.GoreAndAsh.Network.Module
                       Game.GoreAndAsh.Network.State

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bitset >= 1.5
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , exceptions >= 0.8.0.2
                     , extra >= 1.4.2
                     , gore-and-ash >= 1.0.0.0
                     , gore-and-ash-logging >= 1.0.0.0
                     , hashable >= 1.2.3.3
                     , henet >= 1.3.9.3
                     , mtl >= 2.2.1
                     , netwire >= 5.0.1
                     , network >= 2.6.2.1
                     , text >= 1.2.1.3
                     , text-show >= 2
                     , unordered-containers >= 0.2.5.1
                     
  default-extensions:  
                       Arrows
                       BangPatterns
                       DeriveGeneric
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       UndecidableInstances
