name:                gore-and-ash-network
version:             3.0.0.0
synopsis:            Core module for Gore&Ash engine with low level network API
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash-network
license:             BSD3
license-files:       LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015-2017 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

bug-reports:          https://github.com/Teaspot-Studio/gore-and-ash-network/issues

flag examples
  description: Enable building of examples
  default:     False

source-repository head
  type:               git
  location:           git@github.com:Teaspot-Studio/gore-and-ash-network.git

library
  hs-source-dirs:     src
  exposed-modules:
    Game.GoreAndAsh.Network
    Game.GoreAndAsh.Network.API
    Game.GoreAndAsh.Network.Backend
    Game.GoreAndAsh.Network.Backend.TCP
    Game.GoreAndAsh.Network.Error
    Game.GoreAndAsh.Network.Module
    Game.GoreAndAsh.Network.Options
    Game.GoreAndAsh.Network.State

  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , binary                >= 0.8      && < 0.9
    , bytestring            >= 0.10.6.0 && < 0.11
    , containers            >= 0.5.6.2  && < 0.6
    , deepseq               >= 1.4.1.1  && < 1.5
    , exceptions            >= 0.8.0.2  && < 0.9
    , extra                 >= 1.4.2    && < 1.7
    , gore-and-ash          >= 3.0      && < 3.1
    , gore-and-ash-logging  >= 4.0      && < 4.1
    , immortal              >= 0.2      && < 0.3
    , monad-control         >= 1.0      && < 1.1
    , mtl                   >= 2.2.1    && < 2.3
    , network               >= 2.6.2.1  && < 2.7
    , network-transport     >= 0.4      && < 0.6
    , network-transport-tcp >= 0.6      && < 0.7
    , resourcet             >= 1.1.7.1  && < 1.3
    , stm                   >= 2.4      && < 2.5
    , text                  >= 1.2.1.3  && < 1.3
    , these                 >= 0.7      && < 0.8
    , transformers          >= 0.4.2    && < 0.6
    , transformers-base     >= 0.4.4    && < 0.6
    , unordered-containers  >= 0.2.5.1  && < 0.3

  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances


executable gore-and-ash-network-example01
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example01.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 3.0      && < 3.1
    , gore-and-ash-logging  >= 4.0      && < 4.1
    , gore-and-ash-network
    , mtl                   >= 2.2      && < 2.3
    , network               >= 2.6      && < 2.7

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded
